--- a/notes-alinen/notes-sep19.adoc
+++ b/notes-alinen/notes-sep19.adoc
@@ -7,4 +7,6 @@ include::header.adoc[]
 
 link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2c1c9663-1ea3-4af1-99ed-af15013b2ad1[Video - Mon]
 
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=35724404-c3eb-4313-b0e1-af17014310ad[Video - Wed]
+
 link:https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week04-sep19[Lecture Examples]
