post notes/links

--- a/notes-alinen/notes-sep26.adoc
+++ b/notes-alinen/notes-sep26.adoc
@@ -6,3 +6,7 @@ include::header.adoc[]
 = {title}
 
 link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1283c7be-4ef7-4507-9e72-af1c013ad593[Video - Mon]
+
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d386b561-fd9b-4866-807e-af1e0137cdd9[Video - Wed]
+
+link:https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week05-sep26[Class examples]
